# detection-rules

./: .dccache  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLI.md  CONTAINER.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  NOTICE.txt  PHILOSOPHY.md  Pipfile  README.md  Troubleshooting.md  b.py  catalog-info.yaml  docker-compose.yml  execution_suspicious_java_netcon_childproc.toml  generate_rules.py  helper.py  pyproject.toml  query_field_count.py  report.md  requirements-dev.txt  requirements.txt  rule_tag_taxonomy.md  runtime.txt  setup.cfg  test.py  update_rules.py
.buildkite/: diff  pipeline.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  paths-labeller.yml  release-drafter.yml  stale.yml
custom-rules/: Update-1.toml  Update1.toml  command_and_control_example_ip_rule.toml  defense_evasion_aws_vpc_flow_logs_deletion_duplicate - Copy.toml  defense_evasion_aws_vpc_flow_logs_deletion_duplicate.toml  update1.txt
cw_dac/: _config.yaml
detection_rules/: AGENTS.md  __init__.py  __main__.py  action.py  action_connector.py  ast_dag.py  atlas.py  attack.py  beats.py  cli_utils.py  config.py  constraints.py  custom_rules.py  custom_schemas.py  devtools.py  docs.py  ecs.py  ecs_scope.py  endgame.py  esql.py  esql_errors.py  eswrap.py  events_emitter.py  events_emitter_eql.py  exception.py  fuzzylib.py  generic_loader.py  ghwrap.py  guide.py  index_mappings.py  integrations.py  jupyter.py  kbwrap.py  kibana.py  main.py  mappings.py  misc.py  mixins.py  ml.py  navigator.py  (+13 more)
docs/: ATT&CK-coverage.md  ML_DGA.md  ProblemChild.md  coverage.md  custom-rules.md  deprecated-rules.md  deprecating.md  detections-as-code-guide.md  detections-as-code.md  developing.md  docset.yml  index.md  rule-insights.md  rule_insights.md  signals_generation.md  signals_generation_walk-through.ipynb  typosquat_rule.md  typosquatting_rule.md  versioning.md
docs-api/: kibana-openapi-source.json
docs-dev/: ATT&CK-coverage.md  cloud-defend-resurrection.md  custom-rules-management.md  deprecating.md  detections-as-code.md  developing.md  multi-version-threat-mappings.md  versioning.md
docs-logs/: 2025-03-kibana-export-refactor.md  2025-03-kibana-import-refactor.md  2025-07-strip_version-config.md  2025-08-cli-feature-parity.md  2025-08-duplicate-import-investigation.md  2025-09-test-runner-adjustments.md  auto-generate-exception-id.md  default-author-config.md  default-rule-dir-fallback.md  exclude-exceptions.md  export-timeline-templates.md  export-value-lists.md  import-rules-rule-name-flag.md  import-timeline-templates.md  import-value-lists.md  optional-metadata-dates.md  skip-existing-exception-lists.md  strip-dates-exceptions-connectors.md  strip-dates.md  strip-exception-list-id.md  timeline-template-toml.md  value-list-overwrite.md
erics_folder/: _config.yaml
esql/: EsqlBaseLexer.py  EsqlBaseParser.py  EsqlBaseParserListener.py  errors.py  esql_listener.py  esql_listener_v8_11_0_adapter.py  iesql_listener.py  iesql_parser.py  utils.py
etc/: __init__.py  attack-technique-redirects.json  commit-and-push.sh  deprecated_rules.json  ecs_mappings.json  lock-multiple.sh  non-ecs-schema.json  packages.yml  rule_template_typosquatting_domain.json  rule_template_typosquatting_domain.toml  rules-changelog.json  stack-schema-map.yaml  target_branches.yml  test_toml.json  version.lock.json
hunt_queries/: README.md  generate_markdown.py  index.md  llm_dos_resource_exhaustion_detection.md  llm_latency_anomalies_detection.md  llm_sensitive_content_refusal_detection.md
hunting/: AGENTS.md  README.md  __init__.py  __main__.py  definitions.py  generate_markdown.py  index.md  index.yml  json.py  markdown.py  run.py  search.py  upload.py  utils.py
kibana/: __init__.py  connector.py  definitions.py  pyproject.toml  resources.py  setup.cfg  setup.py
kql/: __init__.py  ast.py  dsl.py  eql2kql.py  errors.py  evaluator.py  kql.g  kql2eql.py  optimizer.py  parser.py  pyproject.toml  setup.cfg  setup.py
lib/kibana/: AGENTS.md  pyproject.toml
lib/kibana/kibana/: __init__.py  connector.py  definitions.py  resources.py
lib/kql/: AGENTS.md  pyproject.toml
lib/kql/kql/: __init__.py  ast.py  dsl.py  eql2kql.py  evaluator.py  kql.g  kql2eql.py  optimizer.py  parser.py  utils.py
rta/: README.md  __init__.py  __init__.py.bak  __main__.py  __main__.py.bak  adobe_hijack.py  adobe_hijack.py.bak  adobe_priv_helper_tool.py  app_bundler_execution.py  app_hijack.py  appcompat_shim.py  appcompat_shim.py.bak  at_command.py  at_command.py.bak  at_job.py  atom_init_coffee.py  attempt_to_establish_vscode.py  auth_plugin.py  automator_workflows.py  background_process_from_tmp.py  bash_cmdline_history.py  bifrost_attack.py  binary_execution_from_shared_memory.py  binary_masquerade.py  bitsadmin_download.py  bitsadmin_download.py.bak  bitsadmin_execution.py  browser_cred_access.py  browser_debugging.py  brute_force_login.py  builtin_cmd_file_delete.py  c2_dns_from_iso.py  calendar_file_mod.py  cat_network_activity.py  certutil_file_obfuscation.py  certutil_file_obfuscation.py.bak  certutil_webrequest.py  child_w3wp.py  cloud_eicar.py  clr_logs_creation.py  (+616 more)
rulelib/: setup.cfg
rules/: README.md  persistence_group_modification_by_system.toml  persistence_route_table_created.toml
rules-test/: _config.yaml
rules_building_block/: collection_archive_data_zip_imageload.toml  collection_common_compressed_archived_file.toml  collection_files_staged_in_recycle_bin_root.toml  collection_github_new_repo_interaction_for_pat.toml  collection_github_repo_interaction_from_new_ip.toml  collection_linux_suspicious_clipboard_activity.toml  collection_microsoft_purview_dlp_signal.toml  collection_microsoft_purview_insider_risk_signal.toml  collection_outlook_email_archive.toml  collection_posh_compression.toml  collection_posh_webcam_video_capture.toml  command_and_control_bitsadmin_activity.toml  command_and_control_certutil_network_connection.toml  command_and_control_dns_to_commonly_abused_webservices.toml  credential_access_gdb_memory_dump.toml  (+228 more)
tools/kql/: pyproject.toml
(+4839 files in other folders)
