[metadata]
name = detection_rules
license = Elastic License v2
license_file = LICENSE.txt

[options]
include_package_data = True
packages = find:
install_requires =
    Click==7.0
    elasticsearch~=7.9
    eql==0.9.9
    flake8==3.8.1
    jsl==0.2.4
    jsonschema==3.2.0
    marshmallow-dataclass[union]~=8.5.3
    marshmallow-jsonschema~=0.12.0
    marshmallow-union~=0.1.15
    marshmallow~=3.13.0
    pep8-naming==0.7.0
    pyflakes==2.2.0
    pytest>=3.6
    pytoml
    PyYAML~=5.3
    requests==2.22.0
    toml==0.10.0
    XlsxWriter~=1.3.6
package_dir =
  detection_rules = detection_rules
  detection_rules.kibana = kibana
  detection_rules.kql = kql
  detection_rules.etc = etc
python_requires = >=3.8.0

[options.package_data]
* = *.g
etc = *

[options.extras_require]
dev =
    PyGithub==1.55
