[metadata]
name = detection_rules
description = Detection Rules is the home for rules used by Elastic Security. This repository is used for the development, maintenance, testing, validation, and release of rules for Elastic Security’s Detection Engine.
long_description = file: README.md
version = 8.3.0
license = Elastic License v2
license_file = LICENSE.txt
url = https://github.com/elastic/detection-rules
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
install_requires =
  Click==7.0
  elasticsearch~=8.1
  eql==0.9.12
  flake8==3.8.1
  jsl==0.2.4
  jsonschema==3.2.0
  marshmallow-dataclass[union]~=8.5.6
  marshmallow-jsonschema~=0.12.0
  marshmallow-union~=0.1.15
  marshmallow~=3.13.0
  pep8-naming==0.7.0
  pyflakes==2.2.0
  pytest>=3.6
  pytoml
  PyYAML~=5.3
  requests~=2.27
  toml==0.10.0
  XlsxWriter~=1.3.6
python_requires = >=3.8.0

[options.package_data]
* = *.g
etc = *

[options.extras_require]
dev =
    PyGithub==1.55

[options.entry_points]
console_scripts =
    detection_rules = detection_rules.__main__:main