[project]
name = "detection-rules-kibana"
version = "0.4.4"
description = "Kibana API utilities for Elastic Detection Rules"
license = {text = "Elastic License v2"}
keywords = ["Elastic", "Kibana", "Detection Rules", "Security", "Elasticsearch"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development",
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25,<3.0",
    "elasticsearch~=8.12.1",
]

[project.urls]
Homepage = "https://github.com/elastic/detection-rules"
License = "https://github.com/elastic/detection-rules/blob/main/LICENSE.txt"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
